<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:elevation="8dp"
        card_view:cardCornerRadius="5dp"
        card_view:cardPreventCornerOverlap="true"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBox_add_riddle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Test" />

            <TextView
                android:id="@+id/riddle_id_addriddle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""
                android:visibility="gone" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>