...
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adminhub_btn_groups" />

        <Button
            android:id="@+id/buttonevent"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adminhub_btn_events" />

        <Button
...
